[gd_scene format=3 uid="uid://chmjpsdljt4qq"]

[ext_resource type="Texture2D" uid="uid://dqvo1rw2htr7m" path="res://assets/images/stickers/sun-sticker.png" id="1_004rk"]
[ext_resource type="Script" uid="uid://baehag4hv7mca" path="res://scripts/computer/StickerStore/store_button.gd" id="1_truv6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_truv6"]

[node name="StoreButton" type="Button" unique_id=723610755]
custom_minimum_size = Vector2(100, 130)
offset_right = 100.0
offset_bottom = 130.0
size_flags_horizontal = 6
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_truv6")
script = ExtResource("1_truv6")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1032913380]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -59.0
offset_right = 35.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2

[node name="StickerImage" type="TextureRect" parent="VBoxContainer" unique_id=425675208]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_004rk")
expand_mode = 1
stretch_mode = 5

[node name="StickerName" type="Label" parent="VBoxContainer" unique_id=1867662732]
layout_mode = 2
size_flags_horizontal = 4
text = "Cute Sun"

[node name="StickerPrice" type="Label" parent="VBoxContainer" unique_id=1307734850]
layout_mode = 2
size_flags_horizontal = 4
text = "$10"

[node name="SoldLabel" type="Label" parent="." unique_id=473538447]
layout_mode = 0
offset_left = 41.000004
offset_top = 17.0
offset_right = 86.04821
offset_bottom = 45.36478
rotation = 0.71733034
text = "SOLD"
